修改页面布局

--- a/web/layout/main.html
+++ b/web/layout/main.html
@@ -1,4 +1,4 @@
-<div class="col-lg-10" style="height: 1000px">
+<div class="col-xs-10" style="height: 100%;margin-left: 17%;">
     <div class="container-fluid">
         <div class="row">
             <ol class="breadcrumb">
@@ -8,6 +8,7 @@
             </ol>
         </div>
         <br>
-        <div ng-view></div>
+        <a ui-sref="{{menus}}"></a>
+        <div ui-view></div>
     </div>
 </div>
