--- a/web/layout/menu.html
+++ b/web/layout/menu.html
@@ -1,4 +1,4 @@
-<div class="col-lg-2" style="background-color: #252525;height: 1000px">
+<div class="col-xs-2" style="background-color: #252525;height: 100%;padding: 0;overflow-y: auto;position:fixed;z-index: 999;">
     <aside class="sidebar">
         <nav class="sidebar-nav">
             <ul class="metismenu" id="menu">
@@ -6,9 +6,9 @@
                     <a href="#" aria-expanded="false">{{menu.text}} <span ng-show="menu.subMenus.length" class="glyphicon arrow"></span></a>
                     <ul aria-expanded="false" class="collapse" ng-repeat="subMenu in menu.subMenus">
                         <li>
-                            <a ng-href="{{subMenu.url}}">{{subMenu.text}} <span ng-show="subMenu.thdMenus.length" class="glyphicon arrow"></span></a>
+                            <a ui-sref="{{subMenu.url}}">{{subMenu.text}} <span ng-show="subMenu.thdMenus.length" class="glyphicon arrow"></span></a>
                             <ul aria-expanded="false" class="collapse" ng-repeat="thdMenu in subMenu.thdMenus">
-                                <li><a ng-href="{{thdMenu.url}}">{{thdMenu.text}}</a></li>
+                                <li><a ui-sref="{{thdMenu.url}}">{{thdMenu.text}}</a></li>
                             </ul>
                         </li>
                     </ul>
