--- a/web/layout/header.html
+++ b/web/layout/header.html
@@ -1,11 +1,11 @@
 <div class="container-fluid" style="background-color: #0f0f0f;">
     <div class="row">
-        <div class="col-lg-2">
-            <img src="../images/logoko.png" height="74"/>
-            <img src="../images/logo2.png" height="74" width="170"/>
+        <div class="col-md-2 col-xs-2 col-sm-2">
+            <img src="images/logoko.png" height="74"/>
+            <!--<img src="../images/logo2.png" height="74" width="170"/>-->
         </div>
-        <div class="col-lg-8"></div>
-        <div class="col-lg-1" style="text-align: right;">
+        <!--<div class="col-md-6 col-xs-6 col-sm-6"></div>-->
+        <div class="col-md-2 col-xs-2 col-sm-2 col-md-offset-7 col-xs-offset-7 col-sm-offset-7" style="text-align: right;">
             <!--<div style="line-height: 74px;">-->
             <!--<a>登录</a>-->
             <!--</div>-->
@@ -13,7 +13,7 @@
                 <a style="color: white"><span class="glyphicon glyphicon-user"></span>&nbsp;Demon</a>
             </div>
         </div>
-        <div class="col-lg-1">
+        <div class="col-md-1 col-xs-1 col-sm-1">
             <div style="line-height: 74px;">
                 <a style="color: white"><span class="glyphicon glyphicon-off"></span>&nbsp;注销</a>
             </div>
